--- a/src/sass/utils/container.scss
+++ b/src/sass/utils/container.scss
@@ -3,13 +3,13 @@
   margin: 0 auto;
   padding: 0 10px;
 
-  @media screen and (min-width: 375px) {
+  @media screen and (min-width: $breakpoint-mobile-width) {
     width: $breakpoint-mobile-width;
     padding: 0 $breakpoint-mobile-container-padding-inline;
   }
 
-  @media screen and (min-width: 768px) {
-    width: $breakpoint-tablet-width;
+  @media screen and (min-width: $breakpoint-tablet-width) {
+    width: 120px;
     padding: 0 $breakpoint-tablet-container-padding-inline;
   }
 }
