--- a/src/sass/base/reset.scss
+++ b/src/sass/base/reset.scss
@@ -1,6 +1,6 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
-  padding-block: 25px;
+  padding-block: 25px !important;
 }
 
 h1,
