--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,10 @@
+@import "./base/reset";
 @import "./base/variables";
 
+@import "./components/header";
+
 @import "./utils/container";
+
+//* {
+//  outline: 1px solid tomato;
+//}
