--- a/src/sass/utils/container.scss
+++ b/src/sass/utils/container.scss
@@ -1,4 +1,4 @@
-.container {
+.container-main {
   max-width: 100%;
   margin: 0 auto;
   padding: 0 10px;
@@ -9,7 +9,7 @@
   }
 
   @media screen and (min-width: $breakpoint-tablet-width) {
-    width: 120px;
+    width: 640px;
     padding: 0 $breakpoint-tablet-container-padding-inline;
   }
 }
