--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,8 @@
 @import "./base/variables";
 
 @import "./components/header";
+@import "./components/main";
+@import "./components/block";
 
 @import "./utils/container";
 
