--- a/src/sass/components/block.scss
+++ b/src/sass/components/block.scss
@@ -14,6 +14,13 @@
   border-radius: .2em;
 }
 
+.block-item-row {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
+
 .block-title {
   padding: 0;
   margin: 0 0 10px;
