--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,7 +3,7 @@
 
 @import "./components/main";
 @import "./components/block";
-@import "./components/input-copy";
+@import "./components/results";
 
 @import "./utils/container";
 
