Refactor function structure

--- a/src/sass/components/results.scss
+++ b/src/sass/components/results.scss
@@ -4,8 +4,10 @@
 
   cursor: pointer;
 
-  &:active {
-    border: 1px solid green;
+  &:enabled {
+    &:active {
+      border: 1px solid green;
+    }
   }
 
   &:disabled {
