Add form styling fix

--- a/src/sass/components/results.scss
+++ b/src/sass/components/results.scss
@@ -5,8 +5,10 @@
   cursor: pointer;
 
   &:enabled {
+    color: green;
+
     &:active {
-      border: 1px solid green;
+      outline: 2px solid green;
     }
   }
 
