--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,7 @@
 @import "./components/main";
 @import "./components/block";
 @import "./components/results";
+@import "./components/label-required";
 
 @import "./utils/container";
 
