--- a/src/sass/base/reset.scss
+++ b/src/sass/base/reset.scss
@@ -40,6 +40,16 @@ img {
 
 /* Picnic reset */
 
-input {
+input[type=text] {
+  &:active, &:focus {
+    outline: 2px solid #0074d9;
+  }
+
   transition: none !important;
+}
+
+button[type=submit] {
+  &:active, &:focus {
+    transition: none;
+  }
 }
