--- a/src/sass/components/results.scss
+++ b/src/sass/components/results.scss
@@ -5,14 +5,14 @@
   cursor: pointer;
 
   &:enabled {
-    color: green;
+    color: var(--successColor);
 
     &:active {
-      outline: 2px solid green;
+      outline: 2px solid var(--successColor);
     }
   }
 
   &:disabled {
-    background-color: #dddddd;
+    background-color: var(--backgroundColorDisabled);
   }
 }
