Add fix get.html styling

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 @import "./components/block";
 @import "./components/results";
 @import "./components/label-required";
+@import "./components/event-info-container";
 
 @import "./utils/container";
 
