Add button list styling

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,7 @@
 @import "./components/results";
 @import "./components/label-required";
 @import "./components/event-info-container";
+@import "./components/button-list";
 
 @import "./utils/container";
 
